fix: font flickering no longer happens with fontsource

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
 @plugin "@tailwindcss/typography";
+@import "@fontsource/ibm-plex-sans-condensed";
+@import "@fontsource/ibm-plex-mono";
 
 @theme inline {
 	--font-mono: "IBM Plex Mono", monospace;
@@ -32,37 +34,6 @@
 }
 
 @layer base {
-	@font-face {
-		font-family: 'IBM Plex Sans Condensed';
-		src: url('/fonts/ibm-plex-sans-condensed.woff2') format('woff2-variations');
-		font-weight: 100 800;
-		font-style: normal;
-		font-display: swap;
-	}
-
-	@font-face {
-		font-family: 'IBM Plex Sans Condensed';
-		src: url('/fonts/ibm-plex-sans-condensed-italic.woff2') format('woff2-variations');
-		font-weight: 100 800;
-		font-style: italic;
-		font-display: swap;
-	}
-
-	@font-face {
-		font-family: 'IBM Plex Mono';
-		src: url('/fonts/ibm-plex-mono.woff2') format('woff2-variations');
-		font-weight: 100 800;
-		font-style: normal;
-		font-display: block;
-	}
-
-	@font-face {
-		font-family: 'IBM Plex Mono';
-		src: url('/fonts/ibm-plex-mono-italic.woff2') format('woff2-variations');
-		font-weight: 100 800;
-		font-style: italic;
-		font-display: block;
-	}
 
 	*,
 	::after,
@@ -76,15 +47,18 @@
 	::-moz-selection {
 		@apply bg-primary text-muted;
 	}
-}
 
+	html {
+		@apply bg-background text-foreground scheme-dark;
+	}
 
-@layer components {
-	.prose {}
+	body {
+		@apply font-sans h-svh;
+	}
 }
 
 @layer utility {
-	:where(pre) {
+	pre {
 		@apply border border-dashed rounded-rad hover:border-primary;
 
 		& span {
@@ -92,7 +66,11 @@
 		}
 	}
 
-	:where(blockquote) {
-		@apply text-muted border-border;
+	blockquote {
+		@apply prose [--tw-prose-quote-borders:theme(colors.border)];
+
+		& p {
+			@apply text-muted border-border;
+		}
 	}
 }
